[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/powerups/enemy-wipe.glb" type="PackedScene" id=1]
[ext_resource path="res://assets/powerups/medkit.glb" type="PackedScene" id=2]
[ext_resource path="res://assets/powerups/ammo.glb" type="PackedScene" id=3]
[ext_resource path="res://scripts/Powerup.gd" type="Script" id=4]
[ext_resource path="res://sounds/powerup.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 360 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "use"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( -2, 1, -2 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.2, 1.2, 1.2 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "warning"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Outline:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 0.0392157 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "creation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="BoxShape" id=5]

[sub_resource type="SphereMesh" id=9]
height = 1.0
radial_segments = 16
rings = 8

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
flags_world_triplanar = true
albedo_color = Color( 1, 0, 0, 0.0392157 )

[node name="Powerup" type="Area" groups=[
"powerups",
]]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spin"
anims/hide = SubResource( 1 )
anims/spin = SubResource( 2 )
anims/use = SubResource( 3 )

[node name="WarningAnimation" type="AnimationPlayer" parent="."]
autoplay = "warning"
anims/warning = SubResource( 4 )

[node name="CreationAnimation" type="AnimationPlayer" parent="."]
autoplay = "creation"
anims/creation = SubResource( 8 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Ammo" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
visible = false

[node name="Medkit" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
visible = false

[node name="EnemyWipe" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 5 )

[node name="Outline" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 9 )
material/0 = SubResource( 7 )

[connection signal="area_entered" from="." to="." method="_on_Powerup_area_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
